# Santo-OS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ESTADO_ACTUAL_Y_PROBLEMAS.md  README.md  SISTEMA_PREGUNTAS_IA_COMPLETADO.md  SISTEMA_PREGUNTAS_IA_LISTO.md  TEST_25_PREGUNTAS.md  pyproject.toml  run_poller.py  run_workflow_sandbox.py  santo_context.md
00_INBOX_SANTO_RAW/: _README_INBOX.md  santo_ai_os_need_to_know_dante.html  santo_ai_os_p0_especificacion_tecnica_v2_es_final.html  santo_ai_os_p0_prd_v2_es_final (1).html
ai_brain/: build_rules.md  current_state.md  handoff_corte_santo_full_workflow.md  session_log.md
artifacts/: corte_history_import.json  june2026_corrected_import_dry.json  june2026_corrected_import_write.json
scratch/: backfill.py  backfill_final.py  backfill_v2.py  backfill_v3.py  check_bank_result.py  dump_excel.py  excel_dump.json  explore_cols.py  explore_headers.py  list_sheets.py  search_files.py  search_meta.py  search_meta_all.py
scripts/: import_corte_history.py  load_forecasts.py  parse_forecasts.py
services/: __init__.py  business_time.py
supabase/: README.md
tests/: test_agent_mail_intake.py  test_agent_mail_notifications.py  test_agent_mail_poller.py  test_agent_mail_storage_keys.py  test_business_time.py  test_command_handler.py  test_corte_bank_watcher.py  test_corte_santo_agent_mail_automation.py  test_corte_santo_automation.py  test_corte_santo_cron.py  test_cxc_bank_settlement.py  test_drive_connector.py  test_import_corte_history.py  test_supabase_registry_spine.py
workflows/: README.md  skill_template.md
(+257 files in other folders)
