[project]
name = "santoos"
version = "0.1.0"
description = "Santo AI OS P0 foundation slice"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0,<1.0",
    "anthropic>=0.40.0,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["workflows", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
