[project]
name = "santoos"
version = "0.1.0"
description = "Santo AI OS P0 foundation slice"
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.27.0,<1.0",
    "anthropic>=0.40.0,<1.0",
    "openpyxl>=3.1.0,<4.0",
    "xlrd>=2.0.1,<3.0",
]

[tool.setuptools.packages.find]
include = ["services*", "workflows.utilities*"]
exclude = ["apps*", "scratch*", "supabase*", "ai_brain*", "artifacts*"]

[tool.pytest.ini_options]
testpaths = ["workflows", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
